--- a/.github/workflows/version-workflow.yml
+++ b/.github/workflows/version-workflow.yml
@@ -2,7 +2,7 @@ name: version-workflow
 on: [push]
 jobs:
   check-python-version:
-    runs-on: ubuntu-latest
+    runs-on: linux
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.9.6
