--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 src --count --max-complexity=10 --max-line-length=79
+          flake8 src  --count --select=E9,F63,F7,F82 --exclude=src/distributed_fs/.* --show-source --statistics
+          flake8 src --count --max-complexity=10 --exclude=src/distributed_fs/.* --max-line-length=79
 
       - name: Lint with Pylint
         run: |
-          pylint src
+          pylint --ignore src/distributed_fs/.* src
