--- a/.pylintrc
+++ b/.pylintrc
@@ -2,11 +2,15 @@
 
 module-naming-style=snake_case
 function-naming-style=camelCase
+method-naming-style=camelCase
 class-naming-style=PascalCase
 argument-naming-style=camelCase
 variable-naming-style=camelCase
+attr-naming-style=camelCase
 
 [MESSAGES CONTROL]
 
 disable=
-    missing-docstring
+    missing-docstring,
+    fixme,
+    too-few-public-methods
